# tiny_dalek

./: README.md  sdkconfig
components/Adafruit_NeoPixel/: CMakeLists.txt
components/ESP32Servo/: CMakeLists.txt
components/Stepper/: CMakeLists.txt
components/Stepper/src/: Stepper.cpp
components/llama.c/: CMakeLists.txt  llm.c  llm.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  sound.h  wifi_hal.hpp
